--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="square-container">
       <!-- <div id="container" style="max-height: 800px; width: 800px;"></div> -->
       <div id="container" class="square-chart"></div>
-      <div class="hover-box">test</div>
+      <!-- <div class="hover-box">test</div> -->
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
