--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   </head>
   <body>
     <div class="square-container">
+      <div class="stickyNote">
+        <div class="stickyNote-title">Title</div>
+        <div class="stickyNote-description">This is the description</div>
+      </div>
       <!-- <div id="container" style="max-height: 800px; width: 800px;"></div> -->
       <div id="container" class="square-chart"></div>
       <!-- <div class="hover-box">test</div> -->
